syntax = "proto3";

import "contracts.proto";
import "orders.proto";
import "google/protobuf/timestamp.proto";

// This schema is used for the /ob/listing api call structure
// We use protobuf for this instead of a basic struct because
// the listing object is in protobuf and we can't mix types. Also
// we want to avoid putting fields in the contract that are only
// used by the api.

message ListingReqApi {
    Listing listing              = 1;
    repeated Inventory inventory = 2;
}

message ListingRespApi {
    RicardianContract contract   = 1;
    repeated Inventory inventory = 2;
}

message Inventory {
    string item  = 1;
    uint64 count = 2;
}

message OrderRespApi {
    RicardianContract contract              = 1;
    OrderState state                        = 2;
    bool read                               = 3;
    bool funded                             = 4;
    repeated TransactionRecord transactions = 5;
}

message CaseRespApi {
    google.protobuf.Timestamp timestamp            = 1;
    RicardianContract buyerContract                = 2;
    RicardianContract vendorContract               = 3;
    repeated string buyerContractValidationErrors  = 4;
    repeated string vendorContractValidationErrors = 5;
    OrderState state                               = 6;
    bool read                                      = 7;
    bool buyerOpened                               = 8;
    string claim                                   = 9;
    DisputeResolution resolution                   = 10;
}

message TransactionRecord {
    string txid = 1;
    int64 value = 2;
}
